fix(spells): improve spellbook on Firefox

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1412,6 +1412,7 @@ table.stats.stats-book table.spellbook-entry {
 	display: inline-block;
 	width: 100%;
 	border: #ccc 1px solid;
+	max-width: 440px;
 }
 
 /****************************************
